--- a/demo.ipynb
+++ b/demo.ipynb
@@ -28,7 +28,12 @@
  "cells": [
   {
    "source": [
-    "# 私は"
+    "### 使い方①\n",
+    "下の`!git clone ~`と書かれているセルの左の三角ボタンをクリックして実行してください。**警告**と表示されますが、「このまま実行」をクリックしてください。一番最後の行に`/content/FaceRecognition_kaira`と表示されれば問題ありません。\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Click the triangle button to the left of the cell that says `!git clone ~` below to run it. **Warnings** will be displayed, but click \"Run as is\". If you see `/content/FaceRecognition_kaira` on the very last line, it is OK."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -42,6 +47,30 @@
     "!git clone https://github.com/KYM384/FaceRecognition_kaira\n",
     "%cd FaceRecognition_kaira"
    ]
+  },
+  {
+   "source": [
+    "### 使い方②\n",
+    "次に下のセルを実行してください。「ファイルを選択」と表示されるので、それをクリックしてご自身のコンピュータから使用したい画像を選んでください。画像サイズが大きいと処理に時間がかかります。\n",
+    "\n",
+    "**「No such file: '○○○○'」**と表示される場合はアップロードが上手く行っていないか、ファイルが正常でない可能性があります。もう一度下のセルを実行して試すか、拡張子がちゃんと付いているか確認してください。ファイル名に日本語(全角文字)が含まれる場合も上手く行かない場合があります。\n",
+    "\n",
+    "**「No face found」**と表示される場合は顔検出が上手く行っていません。画像を拡大・トリミングするか、違う画像でお試しください。\n",
+    "\n",
+    "別の人物の顔が表示されたり、顔でない部分が表示される場合も顔検出が上手く行っていないため、上記と同様に対処してみてください。\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Next, run the cell below. Click on the \"Choose File\" button and select the image you want to use from your computer. If the image size is large, it will take longer to process.\n",
+    "\n",
+    "If the message **\"No such file: '○○○○'**\" is displayed, the upload may not have been successful or the file may not be valid. Please try again or check that the file extension is valid. If the file name contains Japanese characters (double-byte characters), it may not work either.\n",
+    "\n",
+    "If the message **\"No face found \"** is displayed, the face detection is not working properly. Please enlarge or crop the image, or try a different image.\n",
+    "\n",
+    "If a different person's face is displayed or a non-face part is displayed, the face detection is not working properly, please try the same as above."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -63,20 +92,18 @@
     "    img = cv2.imread(file_name)\n",
     "\n",
     "    if img is None:\n",
-    "        return \"<h3>画像を取得できませんでした。</h3>\"\n",
+    "        return f\"<h3>No such file: '{args.image}'</h3>\"\n",
     "\n",
     "    results = rec.recognize(img)\n",
     "    if results is None:\n",
-    "        return \"<h3>顔を検出できませんでした。</h3>\"\n",
-    "\n",
-    "    html = \"<h1>結果</h1>\\n\"\n",
+    "        return \"<h3>No face found</h3>\"\n",
     "\n",
     "    face, scores = results\n",
     "    face = cv2.resize(face, (256, 256))\n",
     "    cv2.imwrite(f\"tmp.png\", face)\n",
     "    display_png(Image(\"tmp.png\"))\n",
     "\n",
-    "    html = \"検出された顔<br><h1>結果</h1>\"\n",
+    "    html = \"Detected face<br><h1>Results</h1>\"\n",
     "\n",
     "    for i, score in enumerate(scores):\n",
     "        name, score = score\n",
